--- a/index.html
+++ b/index.html
@@ -38,6 +38,27 @@
           
           <a href="#" class="btn">Download CV</a>
         </div>
+        <div class="profession-container">
+          <div class="profession-box">
+            <div class="profession" style="--i:0;">
+              <i class='bx bx-code-alt' ></i>
+              <h3>Sofware Developer</h3>
+            </div>
+            <div class="profession"style="--i:1;">
+              <i class='bx bx-code' ></i>
+              <h3>Web Developer</h3>
+            </div>
+            <div class="profession" style="--i:2;">
+              <i class='bx bxl-android' ></i>
+              <h3>Mobile Application Developer</h3>
+            </div>
+            <div class="profession" style="--i:3;">
+              <i class='bx bx-laptop' ></i>
+              <h3>AI Developer</h3>
+            </div>
+            <div class="circle"></div>
+          </div>
+        </div>
     </section>
 
     
