--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="profession" style="--i:2;">
               <i class='bx bxl-android' ></i>
-              <h3>Mobile Application Developer</h3>
+              <h3>Mobile App Developer</h3>
             </div>
             <div class="profession" style="--i:3;">
               <i class='bx bx-laptop' ></i>
@@ -58,6 +58,7 @@
             </div>
             <div class="circle"></div>
           </div>
+          <div class="overlay"></div>
         </div>
     </section>
 
