--- a/index.html
+++ b/index.html
@@ -60,8 +60,20 @@
           </div>
           <div class="overlay"></div>
         </div>
+        <div class="home-img">
+          <img src="sachith.png" alt="">
+        </div>
     </section>
 
-    
+    <!--About section-->
+
+  <section class="about" id="about">
+  <div class="about-img">
+    <img src="sachi.jpg" alt="">
+  </div>
+
+  </section>
+
+
 </body>
 </html>
