--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="#"><i class='bx bxl-facebook' ></i></a>
             <a href="#"><i class='bx bxl-instagram' ></i></a>
             <a href="#"><i class='bx bxl-twitter' ></i></a>
-            <a href="#"><i class='bx bxl-github' ></i></a>
+            <a href="https://github.com/sachithpriyamantha"><i class='bx bxl-github' ></i></a>
             <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
           </div>
           
@@ -61,7 +61,7 @@
           <div class="overlay"></div>
         </div>
         <div class="home-img">
-          <img src="sachith.png" alt="">
+          <img src="images/sachith.png" alt="">
         </div>
     </section>
 
@@ -69,9 +69,16 @@
 
   <section class="about" id="about">
   <div class="about-img">
-    <img src="sachi.jpg" alt="">
+    <img src="images/sachi.jpg" alt="">
+</div>
+  <div class="about-content">
+    <h2 class="heading">
+      About <span>Me</span>
+    </h2>
+    <h3>hi, i'm here to help your next project</h3>
+    <p>fkjbjkdbsvkjdbs  nnv i d vndv ddvvi vijsdjvdsnjk hkshfn </p>
+    <a href="#" class="btn">Read More</a>
   </div>
-
   </section>
 
 
