--- a/index.html
+++ b/index.html
@@ -79,8 +79,11 @@
     <p>fkjbjkdbsvkjdbs  nnv i d vndv ddvvi vijsdjvdsnjk hkshfn </p>
     <a href="#" class="btn">Read More</a>
   </div>
-  </section>
 
+   
+
+  </section>
+<script src="script.js"></script>
 
 </body>
 </html>
