--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
     <meta charset="UTF-8" />
     <title>Sachith Priyamantha</title>
     <link rel="stylesheet" href="style.css">
-    <!--box icon-->
+
+    <!-------------------box icon------------------>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
-    <!-- header design -->
+
+    <!------------------------ header design ---------------------------->
     <header class="header">
         <a href="#" class="logo">PORTFOLIO</a>
         <nav class="navbar">
         <a href="#home" class="active">Home</a>
-        <a href="#about" >About</a>
+        <a href="#about"  >About</a>
         <a href="#service" >Services</a>
         <a href="#porfolio" >Portfolio</a>
         <a href="#contact" >Contact</a>
     </nav>
     <div class="bx bx-moon" id="darkMode-icon"></div>
-    </header>
+  </header>
 
-    <!--home section design-->
+    <!----------------home section design------------------------>
     <section class="home" id="home">
         <div class="home-content">
           <h3>Hello, i'm</h3>
@@ -32,7 +35,7 @@
             <a href="#"><i class='bx bxl-facebook' ></i></a>
             <a href="#"><i class='bx bxl-instagram' ></i></a>
             <a href="#"><i class='bx bxl-twitter' ></i></a>
-            <a href="https://github.com/sachithpriyamantha"><i class='bx bxl-github' ></i></a>
+            <a href="#"><i class='bx bxl-github' ></i></a>
             <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
           </div>
           
@@ -59,30 +62,30 @@
             <div class="circle"></div>
           </div>
           <div class="overlay"></div>
+          
         </div>
         <div class="home-img">
           <img src="images/sachith.png" alt="">
         </div>
     </section>
 
-    <!--About section-->
+    <!---------------------About section------------------>
 
-  <section class="about" id="about">
-  <div class="about-img">
-    <img src="images/sachi.jpg" alt="">
-</div>
-  <div class="about-content">
-    <h2 class="heading">
-      About <span>Me</span>
-    </h2>
-    <h3>hi, i'm here to help your next project</h3>
-    <p>fkjbjkdbsvkjdbs  nnv i d vndv ddvvi vijsdjvdsnjk hkshfn </p>
-    <a href="#" class="btn">Read More</a>
-  </div>
+    <section class="about" id="about">
+      <div class="about-img">
+        <img src="images/sachi.jpg" alt="">
+      </div>
+        <div class="about-content">
+        <h2 class="heading">
+          About <span>Me</span>
+        </h2>
+        <h3>hi, i'm here to help your next project</h3>
+        <p>fkjbjkdbsvkjdbs  nnv i d vndv ddvvi vijsdjvdsnjk hkshfn </p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+     </section>
 
-   
-
-  </section>
+  
 <script src="script.js"></script>
 
 </body>
