--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
       </div>
      </section>
 
-  
-<script src="script.js"></script>
+  <!------------custom JS------------->
+  <script src="scripts.js"></script>
+ 
 
 </body>
+
 </html>
