--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Sachith Priyamantha</title>
+    <title>document</title>
     <link rel="stylesheet" href="style.css">
 
     <!-------------------box icon------------------>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="scripts.js"></script>
+
 </head>
 
 <body>
@@ -86,9 +88,9 @@
      </section>
 
   <!------------custom JS------------->
-  <script src="scripts.js"></script>
+  
  
 
 </body>
 
-</html>
+</html
