--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <!-------------------box icon------------------>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    
+    
+    <!------------custom JS------------->
     <script src="scripts.js"></script>
 
 </head>
@@ -87,8 +90,15 @@
       </div>
      </section>
 
-  <!------------custom JS------------->
+  <!----------------service section design----------------->
   
+  <section class="services" id="services">
+    <h2 class="heading">My <span>Services</span></h2>
+
+    <div class="services-container">
+      <div class="services-box"></div>
+    </div>
+  </section>
  
 
 </body>
