--- a/index.html
+++ b/index.html
@@ -96,7 +96,31 @@
     <h2 class="heading">My <span>Services</span></h2>
 
     <div class="services-container">
-      <div class="services-box"></div>
+      <div class="services-box">
+        <i class='bx bx-code-alt' ></i>
+        <h3>software Developer</h3>
+        <p>hfjsb bkjrbkrg bgrbr kbgrhbgrh hgbrhgbr gg rhgbrhg rhbg rhgbrb</p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+      <div class="services-box">
+        <i class='bx bx-code' ></i>
+        <h3>Web Developer</h3>
+        <p>hfjsb bkjrbkrg bgrbr kbgrhbgrh hgbrhgbr gg rhgbrhg rhbg rhgbrb</p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+      <div class="services-box">
+        <i class='bx bxl-android' ></i>
+        <h3>Mobile App Developer</h3>
+        <p>hfjsb bkjrbkrg bgrbr kbgrhbgrh hgbrhgbr gg rhgbrhg rhbg rhgbrb</p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+      <div class="services-box">
+        <i class='bx bx-laptop' ></i>
+        <h3>AI Developer</h3>
+        <p>hfjsb bkjrbkrg bgrbr kbgrhbgrh hgbrhgbr gg rhgbrhg rhbg rhgbrb</p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+
     </div>
   </section>
  
