--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar">
         <a href="#home" class="active">Home</a>
         <a href="#about"  >About</a>
-        <a href="#service" >Services</a>
+        <a href="#services" >Services</a>
         <a href="#porfolio" >Portfolio</a>
         <a href="#contact" >Contact</a>
     </nav>
@@ -80,6 +80,7 @@
       <div class="about-img">
         <img src="images/sachi.jpg" alt="">
       </div>
+
         <div class="about-content">
         <h2 class="heading">
           About <span>Me</span>
@@ -93,7 +94,9 @@
   <!----------------service section design----------------->
   
   <section class="services" id="services">
-    <h2 class="heading">My <span>Services</span></h2>
+    <h2 class="heading">
+      My  <span>Services</span>
+    </h2>
 
     <div class="services-container">
       <div class="services-box">
