--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#home" class="active">Home</a>
         <a href="#about"  >About</a>
         <a href="#services" >Services</a>
-        <a href="#porfolio" >Portfolio</a>
+        <a href="#portfolio" >Portfolio</a>
         <a href="#contact" >Contact</a>
     </nav>
     <div class="bx bx-moon" id="darkMode-icon"></div>
@@ -124,6 +124,62 @@
         <a href="#" class="btn">Read More</a>
       </div>
 
+    </div>
+  </section>
+
+  <!------------Portfolio Section-------------------->
+
+  <section class="portfolio" id="portfolio">
+    <h2 class="heading">Latest <span>Project</span></h2>
+    <div class="portfolio-container">
+      <div class="portfolio-box">
+        <img src="images/pp.jpg" alt="">
+        <div class="portfolio-layer">
+          <h4>Mobile App development</h4>
+          <p>kfjvbjkbvrjv hrvbr vhrv hbvhbgh hbhgv  </p>
+          <a href="#"><i class='bx bx-link-external'></i></a>
+        </div>
+      </div>
+      <div class="portfolio-box">
+        <img src="images/pp.jpg" alt="">
+        <div class="portfolio-layer">
+          <h4>Mobile App development</h4>
+          <p>kfjvbjkbvrjv hrvbr vhrv hbvhbgh hbhgv  </p>
+          <a href="#"><i class='bx bx-link-external'></i></a>
+        </div>
+      </div>
+      <div class="portfolio-box">
+        <img src="images/pp.jpg" alt="">
+        <div class="portfolio-layer">
+          <h4>Mobile App development</h4>
+          <p>kfjvbjkbvrjv hrvbr vhrv hbvhbgh hbhgv  </p>
+          <a href="#"><i class='bx bx-link-external'></i></a>
+        </div>
+      </div>
+      <div class="portfolio-box">
+        <img src="images/pp.jpg" alt="">
+        <div class="portfolio-layer">
+          <h4>Mobile App development</h4>
+          <p>kfjvbjkbvrjv hrvbr vhrv hbvhbgh hbhgv  </p>
+          <a href="#"><i class='bx bx-link-external'></i></a>
+        </div>
+      </div>
+      <div class="portfolio-box">
+        <img src="images/pp.jpg" alt="">
+        <div class="portfolio-layer">
+          <h4>Mobile App development</h4>
+          <p>kfjvbjkbvrjv hrvbr vhrv hbvhbgh hbhgv  </p>
+          <a href="#"><i class='bx bx-link-external'></i></a>
+        </div>
+      </div>
+      <div class="portfolio-box">
+        <img src="images/pp.jpg" alt="">
+        <div class="portfolio-layer">
+          <h4>Mobile App development</h4>
+          <p>kfjvbjkbvrjv hrvbr vhrv hbvhbgh hbhgv  </p>
+          <a href="#"><i class='bx bx-link-external'></i></a>
+        </div>
+      </div>
     </div>
   </section>
  
