--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
   </div>
  </div>
 
+<!---------------------Contact Section------------------------->
+
 <!-------------------------Swiper Js--------------------------->
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
