--- a/index.html
+++ b/index.html
@@ -218,6 +218,24 @@
  </div>
 
 <!---------------------Contact Section------------------------->
+<section class="contact" id="contact">
+  <h2 class="heading">Contact <span>Us</span></h2>
+  <form action="#">
+    <div class="input-box">
+      <input type="text" placeholder="Full Name">
+      <input type="email" placeholder="Email Address">
+    </div>
+    <div class="input-box">
+      <input type="number" placeholder="Mobile Number">
+      <input type="text" placeholder="Email Subject">
+    </div>
+    <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+    <input type="submit" value="Send Massage" class="btn">
+  
+  </form>
+
+
+</section>
 
 <!-------------------------Swiper Js--------------------------->
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
