--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
 <!---------------------Contact Section------------------------->
 <section class="contact" id="contact">
-  <h2 class="heading">Contact <span>Us</span></h2>
+  <h2 class="heading">Contact <span>Me!</span></h2>
   <form action="#">
     <div class="input-box">
       <input type="text" placeholder="Full Name">
@@ -236,6 +236,17 @@
 
 
 </section>
+
+<footer class="footer">
+  <div class="footer-text">
+    <p>Sachith Priyamantha || Undergraduate Student</p>
+  </div>
+  <div class="footer-iconTop">
+    <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+  </div>
+</footer>
+
+
 
 <!-------------------------Swiper Js--------------------------->
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
