--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <a href="#contact" >Contact</a>
     </nav>
     <div class="bx bx-moon" id="darkMode-icon"></div>
+
+    <div class="bx bx-menu" id="menu-icon"></div>
   </header>
 
     <!----------------home section design------------------------>
