--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   <form action="#">
     <div class="input-box">
       <input type="text" placeholder="Full Name">
-      <input type="email" placeholder="Email Address">
+      <input type=" " placeholder="Email Address">
     </div>
     <div class="input-box">
       <input type="number" placeholder="Mobile Number">
