--- a/index.html
+++ b/index.html
@@ -248,6 +248,8 @@
   </div>
 </footer>
 
+<!------scroll reveal------------->
+<script src="https://unpkg.com/scrollreveal"></script>
 
 
 <!-------------------------Swiper Js--------------------------->
